1st version mechanical problem only

--- a/main.tex
+++ b/main.tex
@@ -360,6 +360,7 @@
 % \include{introduction}
 \include{thermomechanics}
 \include{continuum_mechanics_and_finite_element_method}
+\include{mechanical_problem}
 \include{solvers_for_coupled_fields}
 % \include{conclusions}
 \appendix
