w/ temperature time discretization

--- a/continuum_mechanics_and_finite_element_method.tex
+++ b/continuum_mechanics_and_finite_element_method.tex
@@ -307,7 +307,7 @@ Equations \eqref{eq:material_equilibrium} and \eqref{eq:spatial_equilibrium} are
 
 \subsubsection{First principle of thermodynamics}
 
-\begin{equation}
+\begin{equation} \label{eq:first_principle_thermo}
     \rho\dot e = \mat \sigma\;:\;\mat D + \rho r -\text{div}\;\vect q,
 \end{equation}
 where $e$ is the specific internal energy field, $r$ is the density of heat production field and $\vect q$ is the heat flux vector field.
@@ -339,7 +339,7 @@ Combining the first and second thermodynamic principles yields
 
 From the definition of the specific Helmholtz free energy
 \begin{highlight}
-\begin{equation}
+\begin{equation} \label{eq:def_helmholtz_free_energy}
     \psi \equiv e -\theta s,
 \end{equation}
 \end{highlight}
