--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \newcommand\bmmax{0}
 \usepackage{bm}
 \usepackage{amsmath, amsfonts, amssymb, mathrsfs,extarrows}
+\usepackage{upgreek}
 \usepackage{commath}
 \usepackage[retainorgcmds]{IEEEtrantools}
 \usepackage{siunitx}
@@ -361,6 +362,7 @@
 \include{thermomechanics}
 \include{continuum_mechanics_and_finite_element_method}
 \include{mechanical_problem}
+\include{thermo_problem}
 \include{solvers_for_coupled_fields}
 % \include{conclusions}
 \appendix
